# werk

./: .markdownlint.json  Cargo.toml  README.md  TODO.md  Werkfile  example.werk  werk.sublime-syntax  werk.toml  yikes.c
.github/workflows/: book.yml  rust.yml
book/: book.toml
book/src/: SUMMARY.md  build_config.md  build_recipes.md  color.md  command_line.md  command_line_completion.md  command_line_help.txt  depfile_support.md  env.md  features.md  first_example.md  getting_started.md  introduction.md  language.md  long_running_tasks.md  outdatedness.md  paths.md  task_recipes.md  watch.md  werk_cache.md  why_not_just.md  why_not_make.md  why_not_others.md  workspace.md
book/src/examples/: c.md  cargo.md  complex.md  shaders.md
book/src/examples/c/: Werkfile
book/src/examples/c/src/: foo.c  main.c
book/src/examples/cargo/: Cargo.toml  Werkfile
book/src/examples/complex/: Cargo.toml  Werkfile
book/src/examples/complex/plugin1/: Cargo.toml
book/src/examples/complex/plugin1/src/: lib.rs
book/src/examples/complex/plugin2/: Cargo.toml
book/src/examples/complex/program/: Cargo.toml
book/src/examples/shaders/: Werkfile
book/src/language/: arrays.md  builtins.md  config.md  expressions.md  include.md  path_resolution.md  patterns.md  recipe_commands.md  strings.md  variables.md
documentation/: README.md  builtin-command-line.md  builtins.md  depfiles.md  examples.md  features.md  language.md  outdatedness.md  paths.md  patterns.md
examples/: README.md  expressions.toml  expressions.yaml
examples/c/: Werkfile  foo.c  main.c  werk.toml
examples/demo/: Werkfile
examples/hello/: Werkfile
examples/include/: Werkfile  config.werk  foo.c  foo.h  recipes.werk
examples/issue-41/: Werkfile
examples/shaders/: Werkfile
examples/write/: Werkfile  werk.toml
playground/: example.werk
tests/: Cargo.toml  lib.rs  mock_io.rs  test_cases.rs  test_eval.rs  test_expressions.rs  test_io.rs  test_outdatedness.rs  test_path_resolution.rs  test_pattern_match.rs
tests/benches/: bench_eval.rs  bench_iai.rs
tests/cases/: array.werk  copy.werk  dedup.werk  discard.werk  env.werk  filter.werk  flatten.werk  join.werk  map.werk  match_expr.werk  nested_patterns.werk  read.werk  split.werk  string_interp.werk  write.werk
tests/fail/: ambiguous_build_recipe.txt  ambiguous_build_recipe.werk  ambiguous_path_resolution.txt  ambiguous_path_resolution.werk  capture_group_out_of_bounds.txt  capture_group_out_of_bounds.werk  duplicate_config.txt  duplicate_config.werk  include_missing.txt  include_missing.werk  include_self.txt  include_self.werk  include_twice.txt  include_twice.werk  include_with_default.txt  include_with_default.werk  include_with_error.txt  include_with_error.werk  index_out_of_bounds.txt  index_out_of_bounds.werk
werk-cli/: Cargo.toml  build.rs  complete.rs  dry_run.rs  main.rs  render.rs  watcher.rs
werk-cli/render/: ansi.rs  json.rs  log.rs  null.rs
werk-cli/render/ansi/: progress.rs  term_width.rs
werk-cli/watcher/: ansi.rs  json.rs  log.rs  stream.rs
werk-fs/: Cargo.toml  absolute.rs  lib.rs  path.rs  sym.rs  traits.rs
werk-fs/path/: validate.rs
werk-parser/: Cargo.toml  ast.rs  document.rs  error.rs  lib.rs  parse.rs  parse_string.rs  parse_toml.rs  parser.rs  pattern.rs  semantic_hash.rs
werk-parser/ast/: expr.rs  keyword.rs  string.rs  token.rs
werk-parser/parser/: span.rs  string.rs
werk-parser/tests/: test_cases.rs  test_errors.rs
werk-parser/tests/cases/: build_ident_name.txt  build_ident_name.werk  expr_trailing_pipe.txt  invalid_escape.werk  let_no_eq.txt  let_no_ident.txt  let_no_ident.werk  task_string_name.txt
werk-parser/tests/fail/: build_ident_name.txt  default_invalid_value.txt  default_invalid_value.werk  default_unknown_key.txt  default_unknown_key.werk  expr_trailing_pipe.txt  expr_trailing_pipe.werk  invalid_escape.txt  let_no_eq.txt  let_no_ident.txt  let_no_value.txt  match_no_arrow.txt  match_no_arrow.werk  match_unterminated.txt  match_unterminated.werk  root_invalid.txt  root_invalid.werk  spawn_in_build_recipe.txt  spawn_in_build_recipe.werk  spawn_in_build_recipe_run_block.txt  spawn_in_build_recipe_run_block.werk  task_string_name.txt  task_string_name.werk
werk-parser/tests/succeed/: c.json  c.werk  config.json  config.werk  expr_parens.json  expr_parens.werk  let_list.json  let_map.json  let_map.werk  let_match.json  let_match.werk  let_match_inline.json  let_match_inline.werk  let_simple.json  let_simple.werk  let_simple_interp.json  let_simple_interp.werk  spawn.json  spawn.werk
werk-runner/: Cargo.toml  cache.rs  depfile.rs  error.rs  eval.rs  glob.rs  io.rs  ir.rs  lib.rs  outdatedness.rs  pattern.rs  project.rs  recipes.rs  render.rs  runner.rs  scope.rs  shell.rs  value.rs  warning.rs  watcher.rs  which.rs  workspace.rs
werk-runner/eval/: string.rs  used.rs
werk-runner/io/: child.rs
werk-runner/runner/: command.rs  dep_chain.rs  task.rs
werk-util/: Cargo.toml  cancel.rs  diagnostic.rs  lib.rs  os_str.rs  semantic_hash.rs  span.rs  symbol.rs
werk-vscode/: CHANGELOG.md  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  vsc-extension-quickstart.md
werk-vscode/syntaxes/: werk.tmLanguage.json
