[workspace]
members = ["werk-parser", "werk-cli", "werk-runner", "werk-fs", "tests"]
resolver = "2"

[workspace.dependencies]
ahash = "0.8.11"
werk-runner.path = "werk-runner"
werk-parser.path = "werk-parser"
werk-fs.path = "werk-fs"
winnow = "0.6.20"
thiserror = "2.0"
tokio = { version = "1.41", default-features = false, features = [
    "rt-multi-thread",
    "process",
    "macros",
    "fs",
] }
tracing = "0.1.40"
indexmap = { version = "2.6.0", features = ["serde"] }
parking_lot = "0.12.3"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
