[workspace]
members = [
    "werk-parser",
    "werk-cli",
    "werk-runner",
    "werk-fs",
    "tests",
    "werk-util",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
rust-version = "1.85"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ahash = "0.8.11"
werk-runner.path = "werk-runner"
werk-parser.path = "werk-parser"
werk-fs.path = "werk-fs"
werk-util.path = "werk-util"
winnow = "0.7.0"
thiserror = "2.0"
tracing = "0.1.40"
indexmap = { version = "2.6.0", features = ["serde"] }
parking_lot = "0.12.3"
regex = "1.11.1"
regex-syntax = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
smol = "2.0.2"
toml_edit = "0.23.9"
futures = "0.3.31"
annotate-snippets = "0.11.5"
anstream = "0.6.18"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_panics_doc = "allow"
missing_errors_doc = "allow"
inline_always = "allow"
similar_names = "allow"

[profile.release]
codegen-units = 1
lto = true
