[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
werk-runner.workspace = true
werk-parser.workspace = true
werk-fs.workspace = true
anyhow = "1"
parking_lot.workspace = true
ahash.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.18"
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.0"
toml_edit.workspace = true

[lib]
path = "lib.rs"

[[test]]
name = "test_expressions"
path = "test_expressions.rs"

[[test]]
name = "test_pattern_match"
path = "test_pattern_match.rs"

[[test]]
name = "test_outdatedness"
path = "test_outdatedness.rs"
