[package]
name = "tests"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
werk-runner.workspace = true
werk-parser.workspace = true
werk-fs.workspace = true
anyhow = "1"
parking_lot.workspace = true
ahash.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.18"
smol.workspace = true
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.0"
toml_edit.workspace = true
futures.workspace = true
regex.workspace = true
werk-util.workspace = true
anstream.workspace = true
# Hijacking winnow for the Offset trait
winnow.workspace = true

[dev-dependencies]
criterion = "0.3"
iai = "0.1"

[lib]
path = "lib.rs"

[[test]]
name = "test_expressions"
path = "test_expressions.rs"

[[test]]
name = "test_pattern_match"
path = "test_pattern_match.rs"

[[test]]
name = "test_outdatedness"
path = "test_outdatedness.rs"

[[test]]
name = "test_path_resolution"
path = "test_path_resolution.rs"

[[test]]
name = "test_cases"
path = "test_cases.rs"

[[bench]]
name = "bench_eval"
harness = false

# [[bench]]
# name = "bench_iai"
# harness = false
