[package]
name = "werk-cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "werk"
path = "main.rs"

[dependencies]
ahash.workspace = true
annotate-snippets = "0.11.5"
anstream = "0.6.18"
anstyle-query = "1.1.2"
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive", "string"] }
clio = "0.3.5"
indexmap.workspace = true
line-span = "0.1.5"
num_cpus = "1.16.0"
owo-colors = "4.1.0"
parking_lot.workspace = true
shadow-rs = "0.37.0"
smol.workspace = true
thiserror.workspace = true
toml_edit.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }
tracing.workspace = true
werk-fs.workspace = true
werk-parser.workspace = true
werk-runner.workspace = true
anstyle = "1.0.10"
serde.workspace = true
serde_json = "1.0.137"
notify-debouncer-full = "0.5.0"


[build-dependencies]
shadow-rs = "0.37.0"
