[package]
name = "werk-cli"
build = "build.rs"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "werk"
path = "main.rs"

[dependencies]
ahash.workspace = true
annotate-snippets = "0.11.5"
anstream.workspace = true
anstyle-query = "1.1.2"
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive", "string"] }
clio = "0.3.5"
indexmap.workspace = true
line-span = "0.1.5"
num_cpus = "1.16.0"
owo-colors = "4.1.0"
parking_lot.workspace = true
shadow-rs = "1.1.1"
smol.workspace = true
thiserror.workspace = true
toml_edit.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }
tracing.workspace = true
werk-fs.workspace = true
werk-parser.workspace = true
werk-runner.workspace = true
werk-util.workspace = true
anstyle = "1.0.10"
serde.workspace = true
serde_json = "1.0.137"
notify-debouncer-full = "0.6.0"
ctrlc = { version = "3.4.5", features = ["termination"] }
futures.workspace = true
libc = "0.2.169"
clap_complete = { version = "4.5.44", features = ["unstable-dynamic"] }

[target.'cfg(windows)'.dependencies]
# Needed to get terminal width.
windows-sys = { version = "0.60.0", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
] }


[build-dependencies]
shadow-rs = "0.38.0"
