[package]
name = "werk-fs"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies]
winnow.workspace = true
thiserror.workspace = true
serde.workspace = true
werk-util.workspace = true
stringleton.workspace = true

[lints]
workspace = true
