[package]
name = "werk-parser"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[[test]]
name = "test_cases"

[dependencies]
indexmap.workspace = true
thiserror.workspace = true
unicode-ident = "1.0.13"
winnow.workspace = true
regex.workspace = true
annotate-snippets.workspace = true
serde.workspace = true
werk-util.workspace = true

[dev-dependencies]
anstream = "0.6.18"
serde_json = "1.0.137"

[lints]
workspace = true
