[package]
name = "werk-parser"
version.workspace = true
rust-version.workspace = true
edition = "2024"
license.workspace = true

[lib]
path = "lib.rs"

[[test]]
name = "test_cases"

[dependencies]
indexmap.workspace = true
thiserror.workspace = true
unicode-ident = "1.0.13"
winnow.workspace = true
regex.workspace = true
annotate-snippets.workspace = true
serde.workspace = true
werk-util.workspace = true

[dev-dependencies]
anstream.workspace = true
serde_json = "1.0.137"

[lints]
workspace = true
