[package]
name = "werk-util"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies]
ahash.workspace = true
hashbrown = "0.15.2"
parking_lot.workspace = true
serde.workspace = true
annotate-snippets.workspace = true
indexmap.workspace = true

[lints]
workspace = true
